// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuggestItem is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiSuggestItem testClass1 testClass2"
  data-test-subj="test subject string"
>
  <span
    class="euiSuggestItem__type euiSuggestItem__type--tint1"
  >
    <span
      color="inherit"
      data-euiicon-type="search"
    />
  </span>
  <span
    class="euiSuggestItem__label euiSuggestItem__labelDisplay--expand euiSuggestItem__label--width50"
    title="Test label"
  >
    Test label
  </span>
</div>
`;

exports[`props descriptionDisplay as wrap is rendered 1`] = `
<div
  class="euiSuggestItem"
>
  <span
    class="euiSuggestItem__type euiSuggestItem__type--tint2"
  >
    <span
      color="inherit"
      data-euiicon-type="kqlValue"
    />
  </span>
  <span
    class="euiSuggestItem__label euiSuggestItem__labelDisplay--fixed euiSuggestItem__label--width50"
    title="This is the description"
  >
    This is the description
  </span>
  <span
    class="euiSuggestItem__description euiSuggestItem__description--wrap"
    title="This is the description"
  >
    This is the description
  </span>
</div>
`;

exports[`props item with no description has expanded label is rendered 1`] = `
<div
  class="euiSuggestItem"
>
  <span
    class="euiSuggestItem__type euiSuggestItem__type--tint2"
  >
    <span
      color="inherit"
      data-euiicon-type="kqlValue"
    />
  </span>
  <span
    class="euiSuggestItem__label euiSuggestItem__labelDisplay--expand euiSuggestItem__label--width50"
    title="Charles de Gaulle International Airport"
  >
    Charles de Gaulle International Airport
  </span>
</div>
`;

exports[`props labelDisplay as expand is rendered 1`] = `
<div
  class="euiSuggestItem"
>
  <span
    class="euiSuggestItem__type euiSuggestItem__type--tint2"
  >
    <span
      color="inherit"
      data-euiicon-type="kqlValue"
    />
  </span>
  <span
    class="euiSuggestItem__label euiSuggestItem__labelDisplay--expand"
    title="This is the description"
  >
    This is the description
  </span>
  <span
    class="euiSuggestItem__description euiSuggestItem__description--truncate"
    title="This is the description"
  >
    This is the description
  </span>
</div>
`;

exports[`props labelWidth is 30% is rendered 1`] = `
<div
  class="euiSuggestItem"
>
  <span
    class="euiSuggestItem__type euiSuggestItem__type--tint2"
  >
    <span
      color="inherit"
      data-euiicon-type="kqlValue"
    />
  </span>
  <span
    class="euiSuggestItem__label euiSuggestItem__labelDisplay--fixed euiSuggestItem__label--width30"
    title="This is the description"
  >
    This is the description
  </span>
  <span
    class="euiSuggestItem__description euiSuggestItem__description--truncate"
    title="This is the description"
  >
    This is the description
  </span>
</div>
`;
